<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:background="@drawable/justjava"
    tools:context="com.example.android.justjava.MainActivity">




  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/this_sample_app_calculates"
      android:textColor="@android:color/white"
      android:textSize="30sp"
      android:layout_marginStart="80sp"
      android:layout_marginLeft="80sp"/>

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/and_tracking_basic_coffee_order"
      android:textColor="@android:color/white"
      android:textSize="30sp"
      android:layout_marginStart="50sp"
      android:layout_marginLeft="50sp"/>
    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="16sp"
        android:layout_marginStart="245sp"
        android:layout_marginLeft="245sp"
        android:textColor="#FFFFFF"/>
    <Button
        android:id="@+id/increment"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/plus"
        android:onClick="increment"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="270dp"
        android:layout_marginLeft="270dp"/>

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="285sp"
        android:layout_marginLeft="285sp"
        android:text="0"
        android:textColor="@android:color/white"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/decrement"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/minus"
        android:onClick="decrement"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="270dp"
        android:layout_marginLeft="270dp"
        android:textSize="16sp" />

       <TextView
       android:id="@+id/price"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="16sp"
       android:layout_marginStart="265sp"
       android:layout_marginLeft="265sp"
       android:text="@string/price"
       android:textColor="@android:color/white"
       android:textSize="20sp"
       android:textAllCaps="true"
       android:textStyle="bold"/>

  <TextView
      android:id="@+id/price_text_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="$0"
      android:textColor="@android:color/white"
      android:textSize="25sp"
      android:layout_marginStart="275sp"
      android:layout_marginLeft="275sp"/>

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="240dp"
        android:text="@string/Order"
        android:onClick="submitOrder"/>
    
</LinearLayout>
